# snarf

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release-plz.yml
src/: cache.rs  code_search.rs  config.rs  crawl.rs  docs.rs  error.rs  extract.rs  fs_atomic.rs  headers.rs  http.rs  main.rs  scrape.rs  search.rs  testserver.rs  types.rs  updatecheck.rs  urlrewrite.rs
tests/: cancel_signal.rs  reference_cli.rs  snarf_cli.rs
