[package]
name = "snarf"
version = "0.1.2"
edition = "2024"
default-run = "snarf"
description = "Fast CLI for web searching."
repository = "https://github.com/kdheepak/snarf"
homepage = "https://github.com/kdheepak/snarf"
documentation = "https://github.com/kdheepak/snarf"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
directories = "6.0.0"
fs2 = "0.4.3"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
hex = "0.4.3"
html2md = "0.2.15"
quick-xml = { version = "0.40.1", features = ["serialize"] }
rand = "0.10.1"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json", "query"] }
scraper = "0.27.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
url = "2.5.8"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
debug = "full"

[[bin]]
name = "snarf"
path = "src/main.rs"
